[gd_scene load_steps=4 format=2]

[ext_resource path="res://actors/player/bomb.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Bomb" type="Area2D"]
collision_layer = 0
collision_mask = 7
script = ExtResource( 1 )

[node name="ProjectileCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
